Bug 411193 - Home displayed in normal view, but not when starting in split view
Summary: Home displayed in normal view, but not when starting in split view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: split view (other bugs)
Version First Reported In: 19.08.0
Platform: Arch Linux Linux
: VHI major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
: 411257 411268 411342 411406 411414 411642 412563 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-22 23:25 UTC by Marco Parillo
Modified: 2019-10-04 12:54 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.1
Sentry Crash Report:


Attachments
Dolphin with empty split views (47.26 KB, image/png)
2019-08-22 23:25 UTC, Marco Parillo
Details
Dolphin without split panes showing my home directory (99.59 KB, image/png)
2019-08-22 23:26 UTC, Marco Parillo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Parillo 2019-08-22 23:25:35 UTC
Created attachment 122299 [details]
Dolphin with empty split views

SUMMARY

When I start Dolphin with its defaults, I see my $HOME directory, but when I start in split view, both panes are empty.

STEPS TO REPRODUCE
1. Open Dolphin > Settings > Configure Dolphin > Startup > Select Split view mode > OK
2. Close Dolphin, and then Open Dolphin again
3. Both Split Panels are empty and Title Bar says Dolphin
4. Settings > Configure Dolphin > Startup > Deselect Split view mode > OK
5. Close Dolphin, and then Open Dolphin again
6. Main Panel shows the contents of $HOME and Title Bar says Home - Dolphin
 

OBSERVED RESULT

Panels are empty only in split view

EXPECTED RESULT

Panels should show contents of Directories

SOFTWARE/OS VERSIONS

Operating System: Manjaro Linux 
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.61.0
Qt Version: 5.13.0
Kernel Version: 4.19.67-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Core™ i7 CPU M 620 @ 2.67GHz
Memory: 3.6 GiB of RAM


ADDITIONAL INFORMATION
Comment 1 Marco Parillo 2019-08-22 23:26:36 UTC
Created attachment 122300 [details]
Dolphin without split panes showing my home directory
Comment 2 Nate Graham 2019-08-23 12:33:24 UTC
Interesting bug. I'm also on Manjaro, and I cannot reproduce the problem with Dolphin 19.08.0 with those steps to reproduce.
Comment 3 Julian Steinmann 2019-08-23 15:09:30 UTC
I managed to reproduce the issue with Dolphin 19.11.70 on KDE Neon Git Unstable... Maybe some weird configuration issue?
Comment 4 Marco Parillo 2019-08-23 15:54:07 UTC
Note that I cannot reproduce this on Kubuntu Daily images with Dolphin 19.04.3:

Operating System: Kubuntu 19.10
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.61.0
Qt Version: 5.12.4
Kernel Version: 5.2.0-10-generic
OS Type: 64-bit
Processor: 1 × Intel® Core™ i7-6600U CPU @ 2.60GHz
Memory: 1.9 GiB of RAM
Comment 5 Nate Graham 2019-08-25 04:02:35 UTC
*** Bug 411257 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2019-08-25 04:05:13 UTC
Got it to reproduce 100%. Running a git bisect on it.
Comment 7 Nate Graham 2019-08-25 04:27:44 UTC
Caused by https://phabricator.kde.org/D21691.
Comment 8 arun 2019-08-25 08:06:10 UTC
I can confirm this bug on arch linux. affects on dolphin 19.08.
Comment 9 Antonio Rojas 2019-08-25 09:03:59 UTC
*** Bug 411268 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2019-08-25 16:36:24 UTC
Git commit 91709cb6fe61dbec300a8d51d3064a57d9f63f37 by Nate Graham, on behalf of Alexander Saoutkin.
Committed on 25/08/2019 at 16:36.
Pushed by ngraham into branch 'Applications/19.08'.

Fixing bug where split view opens with no URLs

Summary:
FIXED-IN: 19.08.1

Test Plan:
Reproduce steps as given in bug report. Observe the exected result.
Used qdbusviewer and ShowFolders method to observe that no regressions occured
in the "open new folders in tabs" feature.

Reviewers: elvisangelaccio, ngraham

Subscribers: kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D23445

M  +5    -5    src/main.cpp

https://commits.kde.org/dolphin/91709cb6fe61dbec300a8d51d3064a57d9f63f37
Comment 11 Burkhard Lück 2019-08-29 04:43:34 UTC
*** Bug 411406 has been marked as a duplicate of this bug. ***
Comment 12 Antonio Rojas 2019-08-29 10:29:23 UTC
*** Bug 411414 has been marked as a duplicate of this bug. ***
Comment 13 Julian Steinmann 2019-08-31 10:43:41 UTC
*** Bug 411342 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2019-09-09 19:25:14 UTC
*** Bug 411642 has been marked as a duplicate of this bug. ***
Comment 15 Antonio Rojas 2019-10-04 12:54:06 UTC
*** Bug 412563 has been marked as a duplicate of this bug. ***